--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,13 @@
             <artifactId>azure-communication-email</artifactId>
             <version>1.1.0-beta.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.mindrot/jbcrypt -->
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
+
 
     </dependencies>
 
