Starting Donate Functionality

--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,12 @@
             <artifactId>dotenv-java</artifactId>
             <version>3.0.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/net.authorize/anet-java-sdk -->
+        <dependency>
+            <groupId>net.authorize</groupId>
+            <artifactId>anet-java-sdk</artifactId>
+            <version>3.0.0</version>
+        </dependency>
 
     </dependencies>
 
